# beets

./: .coveragerc  .gazelle.yaml.swp  .git-blame-ignore-revs  .gitignore  .hgignore  .hgtags  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Beets Privacy Policy Page  Beets.io About Us page  CNAME  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Duko  LICENSE  MANIFEST.in  NEWS  README  README.rst  README_kr.rst  README_kr.rst.txt  SECURITY.md  TUTORIAL.md  _config.yml  appveyor.yml  beet  beets.css  beets.js  bts  bts.py  codecov.yml  contributing.md  convert_paths.py  dev-requirements.txt  donate.md  gazelle.yaml  (+10 more)
.ci-venv/: pyvenv.cfg
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  flake8-problem-matcher.json  labeler.yaml  pull_request_template.md  sphinx-problem-matcher.json  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/problem-matchers/: sphinx-build.json  sphinx-lint.json
.github/workflows/: changelog_reminder.yaml  check_changelog.yaml  ci.yaml  formatting_check.yml  integration_test.yaml  label-issues.yaml  lint.yaml  lint.yml  make_release.yaml  test-changelog.yaml  test_release.yaml
_drafts/: paths.md
_layouts/: main.html
_posts/: 2012-08-01-new-blog.md  2012-08-03-tomahawk-resolver.md  2012-08-17-one-point-oh.md  2012-08-24-sqlite-nightmare.md  2012-09-09-py3k.md  2012-10-06-twitter.md  2012-11-27-rescheduling.md  2013-01-04-musical-year.md  2013-02-28-github-issues.md  2013-09-02-flexattr.md  2016-06-04-paths.md  2016-06-19-sqlite-performance.md  2022-06-21-walkthrough.md  2022-08-20-walkthrough.md
beets/: .zshrc  __init__.py  __main__.py  _version.py  art.py  attachements.py  attachments.py  bpd.py  completion.py  completion_base.sh  config.py  config_default.yaml  context.py  dbcore.py  device.py  event_types.py  events.py  exceptions.py  importer.py  library.py  logging.py  mediafile.py  metadata_plugins.py  plugins.py  random.py  tag.py  ui.py  vfs.py
beets/autotag/: __init__.py  art.py  candidates.py  distance.py  hooks.py  match.py  mb.py  model.py  source.py
beets/compat/: optparse2click.py
beets/dbcore/: __init__.py  db.py  dbcore_exceptions.py  pathutils.py  query.py  queryparse.py  sort.py  types.py
beets/importer/: __init__.py  actions.py  logfile.py  session.py  stages.py  state.py  tasks.py
beets/player/: bpd.py  gstplayer.py
beets/plugin/: bench.py  convert.py  discogs.py  fetchart.py  fromfilename.py  inline.py  mbsync.py  missing.py  smartplaylist.py  zero.py
beets/test/: __init__.py  _common.py  fixtures.py  helper.py
beets/ui/: __init__.py  cli.py  colors.py  commands.py  completion.py  completion_base.sh  core.py  migrate.py  pipeline.py  terminal_import_session.py
beets/util/: __init__.py  artresizer.py  async_state_machine.py  bluelet.py  collections.py  color.py  concurrency.py  config.py  confit.py  deprecation.py  dict_utils.py  diff.py  enumeration.py  exceptions.py  extension.py  functemplate.py  hidden.py  id_extractors.py  inspect.py  io.py  layout.py  lyrics.py  m3u.py  mb_tagger_server.py  misc.py  musictheory.py  parallel.py  path.py  pathformats.py  pipeline.py  queue.py  random.py  rate_limiter.py  separators.py  units.py  urls.py  user_dirs.py
beetsplug/: __init__.py  _mb_interface.py  _typing.py  abrainz.py  abstract_search.py  absubmit.py  acoustic.py  acousticbrainz.py  advancedrewrite.py  albumify.py  albumtypes.py  amazon.py  artists.py  attachments.py  aura.py  autobpm.py  badfiles.py  bareasc.py  beatport.py  beets2kodi.py  bench.py  betterlisting.py  bottlenose.py  bpm.py  bpsync.py  bucket.py  chroma.py  cmus.py  convert.py  coverart.py  cue.py  customspotify.py  customspotify_bakcup.py  customyoutube.py  datequery.py  dates.py  dateslib.py  dcsync.py  deezer.py  detectmissing.py  (+116 more)
beetsplug/_utils/: __init__.py  art.py  musicbrainz.py  playcount.py  requests.py  vfs.py
beetsplug/bpd/: __init__.py  bluelet.py  gstplayer.py
beetsplug/discogs/: __init__.py  states.py  types.py  utils.py
beetsplug/lastgenre/: __init__.py  aliases.ini  aliases.yaml  client.py  genres-tree.yaml  genres.txt  loaders.py  processing.py  types.py  utils.py
beetsplug/metasync/: __init__.py  amarok.py  itunes.py
beetsplug/mm/: SpotifyPlugin.py  YoutubePlugin.py  __init__.py
beetsplug/mosaic/: __init__.py
beetsplug/mpc/: __init__.py
beetsplug/muziekmachine/: __init__.py
beetsplug/psync/: __init__.py  amarok.py
beetsplug/similarity/: __init__.py  d3d.html  result.json
beetsplug/tidal/: __init__.py  api.py  api_types.py  authenticate.py  session.py
beetsplug/web/: __init__.py  crossdomaindec.py  subsonic.py
blog/: atom.xml  index.md
config/: library.blb
docs/: .gitignore  Makefile  changelog.rst  code_of_conduct.rst  conf.py  contributing.rst  echonest.rst  faq.rst  index.rst  modd.conf  pluginlist.py  pr_analysis_date_merge.md  refresh_safari.js  serve.py  team.rst  team_members.rst
docs/_static/: beets.css
docs/api/: database.rst  index.rst  plugin_utilities.rst  plugins.rst
docs/dev/: api.rst  beets_import_process.graphml  cli.rst  importer.rst  index.rst  library.rst  (+4 more)
extra/: _beet  _beet_cached  ascii_logo.txt  beets.reg  beets_3rd_party_demo.py  changelog.py  release.py  render-test-outputs.py
scripts/: generate_model_stubs.py
snap/: snapcraft.yaml
test/: __init__.py  _common.py  _lyricstext.py  alltests.py  conftest.py  helper.py  library.py  lyrics_download_samples.py  lyrics_sources.py  tag.py  tagtest.py  test_acousticbrainz.py  test_albumify.py  test_albumtypes.py  test_art.py  test_art_resize.py  test_artresizer_resources.py  test_attachments.py  test_autotag.py  test_bareasc.py  test_beatport.py  test_betterlisting.py  test_bucket.py  test_completion.sh  test_config_command.py  test_convert.py  test_database_change.py  test_datequery.py  test_db.py  test_dbcore.py  test_discogs.py  test_echonest.py  test_edit.py  test_embedart.py  test_embyupdate.py  test_export.py  test_fetchart.py  test_filefilter.py  test_files.py  test_ftintitle.py  (+71 more)
(+490 files in other folders)
